mod on index and contact

--- a/index.html
+++ b/index.html
@@ -2,30 +2,33 @@
 <html>
 <head>
     <title>My Page</title>
-	<h1>LOGO</h1>
-	<nav>
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="contact.html">Contact</a></li>
-		</ul>
-	</nav>
 </head>
 <body>
+	<header>
+		<h1><a href="index.html">Logo</a></h1>
+			<nav>
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</nav>
+	</header>
+<!--Welcome-->
 	<div>
-		<h1>Welcome</h1>
+		<h2>Welcome</h2>
 		<img src="assets/img/bio.jpg">
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
 		incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
 		nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 		Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
 		fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-		culpa qui officia deserunt mollit anim id est laborum.
-		</p>
-		<a href="contact.html">Learn More</a>
+		culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p><a href="contact.html">Learn More</a></p>
 	</div>
+<!--Projects-->
 	<div>
-		<h1>Projects</h1>
-		<table border=1px>
+		<h2>Projects</h2>
+		<table border="1">
 			<tr>
 				<th>Title</th>
 				<th>Description</th>
@@ -40,18 +43,19 @@
 			</tr>
 		</table>
 	</div>
+<!--Hire Me-->
 	<div>
-		<h1>Hire Me Today</h1>
+		<h2>Hire Me Today</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-		incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-		</p>
-		<a href="contact.html">Hire Me</a>
+		incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis</p>
+		<p><a href="contact.html">Hire Me</a></p>
 	</div>
+	<footer>
+		<h3>Logo</h3>
+		<p>Lorem ipsum</p>
+		<p>Lorem ipsum dolor sit</p>
+		<p>&copy; 2019 All Rights Reserved</p>
+	</footer>
 </body>
-<footer>
-	<h3>Logo</h3>
-	<p>Lorem ipsum</p>
-	<p>Lorem ipsum dolor sit</p>
-	<p>&copy; 2019 All Rights Reserved</p>
-</footer>
+
 </html>
