--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Page</title>
-	<h1>LOGO</h1>
-	<nav>
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="contact.html">Contact</a></li>
-		</ul>
-	</nav>
+	<title>My Site</title>
 </head>
-
 <body>
-	<h1>Contact</h1>
+	<header>
+		<h1><a href="index.html">LOGO</a></h1>
+			<nav>
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</nav>
+	</header>
+	<h2>Contact</h2>
 	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2428.2333612708753!2d13.440842715668936!3d52.511115744640186!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a84e438bc65e9f%3A0x6bf6d41ba1fc757c!2sBerghain+%7C+Panorama+Bar!5e0!3m2!1sen!2sus!4v1557354969118!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 	<form>
 		<label>Name:<br>
@@ -23,22 +24,27 @@
 			<input type="email" name="Email" required>
 		</label>
 		<br>
-		<label><input type="radio" name="Job" value="partTime">Part Time</label>
-		<br>
-		<label><input type="radio" name="Job" value="Contract">Contract</label>
-		<br>
-		<label>Specs<br>
-			<textarea></textarea>
+		<p>Job Type</p>
+		<label>
+			<input type="radio" name="Job" value="partTime">Part Time
 		</label>
 		<br>
-		<button>Send</button>
+		<label>
+			<input type="radio" name="Job" value="Contract">Contract
+		</label>
+		<br>
+		<label>Specs<br>
+			<textarea name="specs"></textarea>
+		</label>
+		<br>
+		<input type="submit" value="send">
 	</form>
+	<footer>
+		<h3>Logo</h3>
+		<p>Lorem ipsum</p>
+		<p>Lorem ipsum dolor sit</p>
+		<p>&copy; 2019 All Rights Reserved</p>
+	</footer>
 </body>
-<footer>
-	<h3>Logo</h3>
-	<p>Lorem ipsum</p>
-	<p>Lorem ipsum dolor sit</p>
-	<p>&copy; 2019 All Rights Reserved</p>
-</footer>
 
 </html>
